--- a/Secciones/Marcas.html
+++ b/Secciones/Marcas.html
@@ -23,7 +23,7 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav justify-content-around">
                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../Index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                      </li>
                   <li class="nav-item">
                      <a class="nav-link" aria-current="page" href="Empresa.html">Empresa</a>
