--- a/Secciones/Servicios.html
+++ b/Secciones/Servicios.html
@@ -58,35 +58,35 @@
       <div class="cajas">
          <div class="row">
             <div class="col-md-12 col-lg-4 p-2">
-               <div class="cajas_rectangulo background-red rounded">
+               <div class="cajas_rectangulo rounded">
                   <div class="cajas__servicio">
                      <h3>EL MAS AMPLIO STOCK DE REPUESTOS</h3>
                   </div>
                </div>
             </div>
             <div class="col-md-12 col-lg-4 p-2">
-               <div class="cajas__rectangulo background-blue rounded">
+               <div class="cajas__rectangulo rounded">
                   <div class="cajas__servicio">
                      <h3>ASESORAMIENTO TECNICO COMPLETO</h3>
                   </div>
                </div>
             </div>
             <div class="col-md-12 col-lg-4 p-2">
-               <div class="cajas__rectangulo background-orange rounded">
+               <div class="cajas__rectangulo rounded">
                   <div class="cajas__servicio">
                      <h3>ENTREGA DE MERCADERIA PARA CAPITAL FEDERAL Y GRAN BUENOS AIRES</h3>
                   </div>
                </div>
             </div>  
                <div class="col-md-12 col-lg-6 p-2">
-                  <div class="cajas_rectangulo background-pink rounded">
+                  <div class="cajas_rectangulo rounded">
                      <div class="cajas__servicio">
                         <h3>ENVIOS AL INTERIOR DEL PAIS</h3>
                      </div>
                   </div>
                </div>
                <div class="col-md-12 col-lg-6 p-2">
-                  <div class="cajas__rectangulo background-lightblue rounded">
+                  <div class="cajas__rectangulo rounded">
                      <div class="cajas__servicio">
                         <h3>COTIZACIÓN DE REPUESTOS POR WHATSAPP</h3>
                      </div>
