--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
       </section>
       <hr>
       <section class="hojas">
-      <h2 class="container titulo">CONTACTO</h2>
-      <div class="formulario">
+      <h2 class="titulo">CONTACTO</h2>
+      <div class="formulario container">
          <form>
             <div class="form-row">
                <div class="formulario__nombre form-group col-md-6">
