--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -7,7 +7,7 @@
       <meta name="description" content="En esta seccion podras encontrar nuestro contacto, y ademas pódras hacernos la consulta que usted quiera!">
       <meta name="keywords" content="contacto, email, consulta, presupuesto">
       <link rel="stylesheet" href="../css/bootstrap.min.css">
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../scss/archivo.css">
    </head>
    <body>
       <nav class="nav__banner">
