--- a/Secciones/Marcas.html
+++ b/Secciones/Marcas.html
@@ -7,7 +7,7 @@
    <meta name="description" content="En esta seccion encontraras principalmente las marcas de repuestos trabajadas, una leve comparacion acerca de nosotros y por ultimo nuestros metodos de pago!">
    <meta name="keywords" content="marcas, comparacion, metodos, pagos, efectivo, tarjeta">
    <link rel="stylesheet" href="../css/bootstrap.min.css">
-   <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="../scss/archivo.css">
 </head>
 <body>
    <nav class="nav__banner">
