--- a/Secciones/Servicios.html
+++ b/Secciones/Servicios.html
@@ -7,7 +7,7 @@
       <meta name="description" content="En esta seccion encontraras servicios que podemos ofrecerte, ademas tenes un curso de mecanica por si estas interesado!">
       <meta name="keywords" content="servicios, atencion, curso, mecanica, envios">
       <link rel="stylesheet" href="../css/bootstrap.min.css">
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../scss/archivo.css">
    </head>
    <body>
       <nav class="nav__banner">
