--- a/Secciones/Empresa.html
+++ b/Secciones/Empresa.html
@@ -7,7 +7,7 @@
       <meta name="description" content="En esta seccion pódras conocer nuestra historia desde cuando arrancamos!">
       <meta name="keywords" content="historia, empresa, años"> 
       <link rel="stylesheet" href="../css/bootstrap.min.css">
-      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../scss/archivo.css">
    </head>
    <body>
       <nav class="nav__banner">
@@ -61,7 +61,7 @@
                   </div>
                   <div class="col-sm-12 col-md-6">
                      <article class="borde">
-                        <p class="lead">Así nació nuestra empresa
+                        <p>Así nació nuestra empresa
                            En 1968, comenzamos con la venta de accesorios para camiones y colectivos en un pequeño local anexo a una estación de servicio. De a poco fuimos agregando repuestos Fiat hasta lograr añadir la línea. <br>
                            En 1980, con la fusión de Fiat y Peugeot, en ese entonces llamada SEVEL, agregamos la línea de repuestos Peugeot. Con el paso de los años fuimos creciendo hasta agregar la línea completa de Volkswagen. <br>
                            En el año 2001, pese a la grave situación económica, nos involucramos en un nuevo desafío ofreciéndoles a nuestros clientes una nueva línea: Chevrolet. <br>
@@ -78,7 +78,7 @@
             <footer class="container-fluid bg-light p-2">
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 justify-content-center d-flex align-items-center">
-                     <p class="">Av. Sucre 2745, B1643 Béccar, Provincia de Buenos Aires <br>
+                     <p>Av. Sucre 2745, B1643 Béccar, Provincia de Buenos Aires <br>
                         Lunes a Viernes de 8 a 12 hs -14 a 18hs / Sabados de 8 a 12hs <br>
                         4723-2263 <br>
                         1130508543 <br>
