cambios en html

--- a/Secciones/Empresa.html
+++ b/Secciones/Empresa.html
@@ -51,6 +51,7 @@
             </div>
          </div>
       </nav>
+      </nav>
       <section class="hojas">
          <div class="container-fluid">
             <h2 class="titulo">Asi Comenzamos...</h2>
