--- a/Secciones/Marcas.html
+++ b/Secciones/Marcas.html
@@ -49,6 +49,7 @@
       </div>
    </div>
 </nav>
+</nav>
 <h2 class="titulo">Marcas principales con las que trabajamos</h2>
 <img src="../Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
 <table border="2" cellpadding="1" cellspacing="2">
