--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -51,6 +51,7 @@
             </div>
          </div>
       </nav>
+      </nav>
       <h2 class="titulo">CONTACTO</h2>
       <div class="container">
          <form>
