modificacion en seccion servicio

--- a/Secciones/Servicios.html
+++ b/Secciones/Servicios.html
@@ -52,49 +52,43 @@
             </div>
          </nav>
       </nav>
-       <div class="container-fluid">
-      <h2 class="titulo">Nuestros Servicios</h2>
-      <p class="parrafoGrande">En Crosa te ofrecemos una amplia gama de repuestos y autopartes de las líneas Fiat, Peugeot, Chevrolet, Volkswagen y Renault, con la responsabilidad y compromiso que usted necesita</p>
-      <div class="cajas">
-         <div class="row">
-            <div class="col-md-12 col-lg-4 p-2">
-               <div class="cajas_rectangulo rounded">
-                  <div class="cajas__servicio">
-                     <h3>EL MAS AMPLIO STOCK DE REPUESTOS</h3>
-                  </div>
-               </div>
+      <main class="container">
+         <h2>NUESTROS SERVICIOS</h2>
+         <p>En Crosa te ofrecemos una amplia gama de repuestos y autopartes de las líneas Fiat, Peugeot, Chevrolet, Volkswagen y Renault, con la responsabilidad y compromiso que usted necesita</p>
+         <div class="servicios row">
+            <div class="col-sm-12 col-md-4">
+            <div class="servicio">
+               <img src="../Img/herramienta.png">
+               <p>EL MAS AMPLIO STOCK DE REPUESTOS</p>
             </div>
-            <div class="col-md-12 col-lg-4 p-2">
-               <div class="cajas__rectangulo rounded">
-                  <div class="cajas__servicio">
-                     <h3>ASESORAMIENTO TECNICO COMPLETO</h3>
-                  </div>
-               </div>
             </div>
-            <div class="col-md-12 col-lg-4 p-2">
-               <div class="cajas__rectangulo rounded">
-                  <div class="cajas__servicio">
-                     <h3>ENTREGA DE MERCADERIA PARA CAPITAL FEDERAL Y GRAN BUENOS AIRES</h3>
-                  </div>
-               </div>
-            </div>  
-               <div class="col-md-12 col-lg-6 p-2">
-                  <div class="cajas_rectangulo rounded">
-                     <div class="cajas__servicio">
-                        <h3>ENVIOS AL INTERIOR DEL PAIS</h3>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-12 col-lg-6 p-2">
-                  <div class="cajas__rectangulo rounded">
-                     <div class="cajas__servicio">
-                        <h3>COTIZACIÓN DE REPUESTOS POR WHATSAPP</h3>
-                     </div>
-                  </div>
-               </div>
+            <div class="col-sm-12 col-md-4">
+            <div class="servicio">
+               <img src="../Img/cliente.png">
+               <p>ASESORAMIENTO TECNICO COMPLETO</p>
             </div>
+            </div>
+            <div class="col-sm-12 col-md-4">
+            <div class="servicio">
+               <img src="../Img/whatsapp.png">
+               <p>COTIZACIÓN DE REPUESTOS POR WHATSAPP</p>
+            </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+            <div class="servicio">
+               <img src="../Img/carrito.png">
+               <p>ENTREGA DE MERCADERIA PARA CAPITAL FEDERAL Y GRAN BUENOS AIRES</p>
+            </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+            <div class="servicio">
+               <img src="../Img/camion.png">
+               <p>ENVIOS AL INTERIOR DEL PAIS</p>
+            </div>
+         </div>
       </div>
-   </div>
+         <h3>¡¡¡ADEMAS TE OFRECEMOS UN CURSO DE MECANICA!!!</h3>
+      </main>
       <h3>¡¡¡ADEMAS TE OFRECEMOS UN CURSO DE MECANICA!!!</h3>
       <iframe class="embed-responsive embed-responsive-16by9" src="https://www.youtube.com/embed/uzKnnNizimM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <footer class="container-fluid bg-light p-2">
