--- a/index.html
+++ b/index.html
@@ -125,53 +125,42 @@
          </div>
       </section>
 <section class="hojas">
-   <div class="servicios container-fluid">
-      <h2 class="servicios__titulo">Nuestros Servicios</h2>
-      <p class="parrafoGrande">En Crosa te ofrecemos una amplia gama de repuestos y autopartes de las líneas Fiat, Peugeot, Chevrolet, Volkswagen y Renault, con la responsabilidad y compromiso que usted necesita</p>
-      <div class="servicios__servicios">
-         <div class="row">
-            <div class="col-md-12 col-lg-4">
-               <div class="servicios__rectangulo">
-                  <div class="servicios__servicio">
-                     <h3>EL MAS AMPLIO STOCK DE REPUESTOS</h3>
-                  </div>
-               </div>
-            </div>
-            <div class="col-md-12 col-lg-4">
-               <div class="servicios__rectangulo bg-claro">
-                  <div class="servicios__servicio">
-                     <h3>ASESORAMIENTO TECNICO COMPLETO</h3>
-                  </div>
-               </div>
-            </div>
-            <div class="col-md-12 col-lg-4">
-               <div class="servicios__rectangulo bg-advertencia">
-                  <div class="servicios__servicio">
-                     <h3>ENTREGA DE MERCADERIA PARA CAPITAL FEDERAL Y GRAN BUENOS AIRES</h3>
-                  </div>
-               </div>
-            </div>
+   <main class="container">
+      <h2>NUESTROS SERVICIOS</h2>
+      <p>En Crosa te ofrecemos una amplia gama de repuestos y autopartes de las líneas Fiat, Peugeot, Chevrolet, Volkswagen y Renault, con la responsabilidad y compromiso que usted necesita</p>
+      <div class="servicios row">
+         <div class="col-sm-12 col-md-4">
+         <div class="servicio">
+            <img src="Img/herramienta.png">
+            <p>EL MAS AMPLIO STOCK DE REPUESTOS</p>
          </div>
-      </div>   
-         <div class="servicios__serviciosComunitarios">
-            <div class="row">
-               <div class="col-md-12 col-lg-6">
-                  <div class="servicios__rectangulo">
-                     <div class="servicios__servicio">
-                        <h3>ENVIOS AL INTERIOR DEL PAIS</h3>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-12 col-lg-6">
-                  <div class="servicios__rectangulo">
-                     <div class="servicios__servicio">
-                        <h3>COTIZACIÓN DE REPUESTOS POR WHATSAPP</h3>
-                     </div>
-                  </div>
-               </div>
-            </div>   
          </div>
+         <div class="col-sm-12 col-md-4">
+         <div class="servicio">
+            <img src="Img/cliente.png">
+            <p>ASESORAMIENTO TECNICO COMPLETO</p>
+         </div>
+         </div>
+         <div class="col-sm-12 col-md-4">
+         <div class="servicio">
+            <img src="Img/whatsapp.png">
+            <p>COTIZACIÓN DE REPUESTOS POR WHATSAPP</p>
+         </div>
+         </div>
+         <div class="col-sm-12 col-md-6">
+         <div class="servicio">
+            <img src="Img/carrito.png">
+            <p>ENTREGA DE MERCADERIA PARA CAPITAL FEDERAL Y GRAN BUENOS AIRES</p>
+         </div>
+         </div>
+         <div class="col-sm-12 col-md-6">
+         <div class="servicio">
+            <img src="Img/camion.png">
+            <p>ENVIOS AL INTERIOR DEL PAIS</p>
+         </div>
+      </div>
    </div>
+   </main>
       <div class="enviar">
          <input class="botonEnviar" type="submit" value="Enviar Consulta">
       </div>
