--- a/Secciones/Servicios.html
+++ b/Secciones/Servicios.html
@@ -12,8 +12,8 @@
    <body>
       <nav class="nav__banner">
          <div class="nav__iconos">
-            <a href="https://es-la.facebook.com/pages/category/Automotive-Parts-Store/Crosa-repuestos-automotor-577223155762077/"><img src="../Img/ig.png" width="60" height="60" alt=""></a>
-            <a href="https://www.instagram.com/repuestos_crosa/"><img src="../Img/facebook.png" width="60" height="60" alt=""></a>
+            <a href="https://es-la.facebook.com/pages/category/Automotive-Parts-Store/Crosa-repuestos-automotor-577223155762077/"><img src="../Img/facebook-.png" width="40" height="40" alt=""></a>
+            <a href="https://www.instagram.com/repuestos_crosa/"><img src="../Img/instagram-.png" width="40" height="40" alt=""></a>
          </div>
          <nav class="navbar navbar-expand-lg navbar-light justify-content-end">
             <div class="container-fluid">
