cambio de imagen(header) en todas las secciones

--- a/Secciones/Empresa.html
+++ b/Secciones/Empresa.html
@@ -10,7 +10,9 @@
       <link rel="stylesheet" href="../scss/archivo.css">
    </head>
    <body>
-      <nav class="nav__banner">
+      <div class="nav__banner">
+         <img src="../Img/logo!.png"  alt="foto">
+      </div>
       <div class="nav__iconos">
          <a href="https://es-la.facebook.com/pages/category/Automotive-Parts-Store/Crosa-repuestos-automotor-577223155762077/"><img src="../Img/facebook-.png" width="40" height="40" alt=""></a>
          <a href="https://www.instagram.com/repuestos_crosa/"><img src="../Img/instagram-.png" width="40" height="40" alt=""></a>
@@ -50,7 +52,6 @@
                </ul>
             </div>
          </div>
-      </nav>
       </nav>
       <section class="hojas">
          <div class="container-fluid">
