--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
    </head>
    <body>
       <header>
-         <nav class="nav__banner">
+         <div class="nav__banner">
+            <img src="Img/logo!.png"  alt="foto">
+         </div>
             <div class="nav__iconos">
                <a href="https://es-la.facebook.com/pages/category/Automotive-Parts-Store/Crosa-repuestos-automotor-577223155762077/"><img src="Img/facebook-.png" width="40" height="40" alt=""></a>
                <a href="https://www.instagram.com/repuestos_crosa/"><img src="Img/instagram-.png" width="40" height="40" alt=""></a>
@@ -51,7 +53,6 @@
                      </ul>
                   </div>
                </div>
-            </nav>
          </nav>
       </header>
       <div class="container">
