cambio de tabla de comparacion!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="scss/archivo.css">
       <link rel="stylesheet" href="MAP/main.css">
+      <script src="https://kit.fontawesome.com/eec725123d.js" crossorigin="anonymous"></script>
+
    </head>
    <body>
       <header>
@@ -172,37 +174,41 @@
       <section class="hojas">
          <h2 class="hojas__titulo">Marcas principales con las que trabajamos</h2>
          <img class="hojas__imagen" src="Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
-         <table class="hojas__tabla" border="2" cellpadding="1" cellspacing="2">
-            <tr class="fondonegro">
-               <th>                         </th>
+         <table class="table table-hover table-dark table-bordered">
+            <thead>
+            <tr>
+               <th></th>
                <th>Crosa Repuestos</th>
                <th>Cualquier Otra casa de repuestos</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                <td>Servicios de garantia</td>
-               <td class="tilde">    ✓   </td>
-               <td class="error">    X   </td>
+               <td><i class="fas fa-check-circle"></i></td>
+               <td><i class="fas fa-check-circle"></i></td>
             </tr>
             <tr>
                <td>Repuestos de cualquier Marca</td>
-               <td class="tilde">✓</td>
-               <td class="tilde">✓</td>
+               <td><i class="fas fa-check-circle"></i></td>
+               <td><i class="fas fa-times-circle"></i></td>
             </tr>
             <tr>
                <td>Buena atencion al Cliente</td>
-               <td class="tilde">✓</td>
-               <td class="error">X</td>
+               <td><i class="fas fa-check-circle"></i></td>
+               <td><i class="fas fa-times-circle"></i></td>
             </tr>
             <tr>
                <td>Los Mejores Precios de Zona Norte</td>
-               <td class="tilde">✓</td>
-               <td class="error">X</td>
+               <td><i class="fas fa-check-circle"></i></td>
+               <td><i class="fas fa-times-circle"></i></td>
             </tr>
             <tr>
                <td>Envios a cualquier parte del pais</td>
-               <td class="tilde">✓</td>
-               <td class="error">X</td>
+               <td><i class="fas fa-check-circle"></i></td>
+               <td><i class="fas fa-times-circle"></i></td>
             </tr>
+            </tbody>
          </table>
          <h2 class="hojas__titulo">METODOS DE PAGO</h2>
          <marquee behavior="alternate" direction="">
