--- a/Secciones/Marcas.html
+++ b/Secciones/Marcas.html
@@ -8,6 +8,7 @@
    <meta name="keywords" content="marcas, comparacion, metodos, pagos, efectivo, tarjeta">
    <link rel="stylesheet" href="../css/bootstrap.min.css">
    <link rel="stylesheet" href="../scss/archivo.css">
+   <script src="https://kit.fontawesome.com/eec725123d.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <div class="nav__banner">
@@ -53,37 +54,41 @@
 </nav>
 <h2 id="marcas"  class="titulo">Marcas principales con las que trabajamos</h2>
 <img src="../Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
-<table border="2" cellpadding="1" cellspacing="2">
-   <tr id="comparacion" class="fondonegro">
-      <th>                         </th>
+<table class="table table-hover table-dark table-bordered">
+   <thead>
+   <tr>
+      <th></th>
       <th>Crosa Repuestos</th>
       <th>Cualquier Otra casa de repuestos</th>
    </tr>
+   </thead>
+   <tbody>
    <tr>
       <td>Servicios de garantia</td>
-      <td class="tilde">    ✓   </td>
-      <td class="error">    X   </td>
+      <td><i class="fas fa-check-circle"></i></td>
+      <td><i class="fas fa-check-circle"></i></td>
    </tr>
    <tr>
       <td>Repuestos de cualquier Marca</td>
-      <td class="tilde">✓</td>
-      <td class="tilde">✓</td>
+      <td><i class="fas fa-check-circle"></i></td>
+      <td><i class="fas fa-times-circle"></i></td>
    </tr>
    <tr>
       <td>Buena atencion al Cliente</td>
-      <td class="tilde">✓</td>
-      <td class="error">X</td>
+      <td><i class="fas fa-check-circle"></i></td>
+      <td><i class="fas fa-times-circle"></i></td>
    </tr>
    <tr>
       <td>Los Mejores Precios de Zona Norte</td>
-      <td class="tilde">✓</td>
-      <td class="error">X</td>
+      <td><i class="fas fa-check-circle"></i></td>
+      <td><i class="fas fa-times-circle"></i></td>
    </tr>
    <tr>
       <td>Envios a cualquier parte del pais</td>
-      <td class="tilde">✓</td>
-      <td class="error">X</td>
+      <td><i class="fas fa-check-circle"></i></td>
+      <td><i class="fas fa-times-circle"></i></td>
    </tr>
+   </tbody>
 </table>
 <h2 id="pagos" class="titulo">METODOS DE PAGO</h2>
 <marquee behavior="alternate" direction="">
