--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <img class="embed-responsive embed-responsive-16by9" src="Img/sachs.png" alt="sachs" width="1000" height="300">
                      </div>
                      <div class="carousel-item">
-                        <img class="embed-responsive embed-responsive-16by9" src="Img/taranto.png" alt="taranto" width="1000" height="300">
+                        <img class="embed-responsive embed-responsive-16by9" src="Img/bosch.png" alt="taranto" width="1000" height="300">
                      </div>
                      <div class="carousel-item">
                         <img class="embed-responsive embed-responsive-16by9" src="Img/total.png" alt="taranto" width="1000" height="300">
@@ -167,9 +167,6 @@
       <div class="enviar">
          <input class="botonEnviar" type="submit" value="Enviar Consulta">
       </div>
-      <h3>¡¡¡ADEMAS TE OFRECEMOS UN CURSO DE MECANICA!!!</h3>
-      <iframe class="embed-responsive embed-responsive-16by9" src="https://www.youtube.com/embed/uzKnnNizimM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
 </section>
       <section class="hojas">
          <h2 class="hojas__titulo">Marcas principales con las que trabajamos</h2>
