--- a/Secciones/Marcas.html
+++ b/Secciones/Marcas.html
@@ -54,7 +54,7 @@
 </nav>
 <h2 id="marcas"  class="titulo">Marcas principales con las que trabajamos</h2>
 <img src="../Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
-<table class="table table-hover table-dark table-bordered">
+<table id="comparacion" class="table table-hover table-dark table-bordered">
    <thead>
    <tr>
       <th></th>
