--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 </section>
       <section class="hojas">
          <h2 class="hojas__titulo">Marcas principales con las que trabajamos</h2>
-         <img class="hojas__imagen" src="Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
+         <img class="hojas__imagen container-fluid" src="Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
          <table class="table table-hover table-dark table-bordered">
             <thead>
             <tr>
