--- a/Secciones/Empresa.html
+++ b/Secciones/Empresa.html
@@ -61,7 +61,7 @@
                   <div class="col-sm-12 col-md-6">
                      <header class="borde"><img class="img-fluid" src="../Img/mostrador.jpg"  alt="mostrador"></header>
                   </div>
-                  <div class="d-flex align-items-center col-sm-12 col-md-6">
+                  <div class="d-flex align-items-center mb-3 col-sm-12 col-md-6">
                      <article class="borde">
                         <p>Así nació nuestra empresa
                            En 1968, comenzamos con la venta de accesorios para camiones y colectivos en un pequeño local anexo a una estación de servicio. De a poco fuimos agregando repuestos Fiat hasta lograr añadir la línea. <br>
