--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                <div class="col-md-6 col-sm-12">
                   <img class="principal__imagen img-thumbnail" src="Img/negocio.jpg" alt="foto" width="900" height="450">
                </div>
-               <div class="col-md-6 col-sm-12 d-flex align-item-center">
+               <div class="col-md-6 col-sm-12 mb-3 d-flex align-item-center">
                   <h2 class="principal__parrafoGrande1">Disponemos de la más completa línea de repuestos, tanto originales como alternativos para las marcas Fiat, Peugeot, Volkswagen, Chevrolet y Renault. También contamos con gente especializada en el rubro para poder brindarles el mejor servicio. Te podemos ayudar. No dejes de consultarnos.</h2>
                </div>
             </div>
@@ -111,7 +111,7 @@
                   <div class="empresa__imagen col-sm-12 col-md-6">
                      <header class="borde"><img class="img-fluid" src="Img/mostrador.jfif"  alt="mostrador"></header>
                   </div>
-                  <div class="empresa__texto d-flex align-items-center col-sm-12 col-md-6">
+                  <div class="empresa__texto mb-3 d-flex align-items-center col-sm-12 col-md-6">
                      <article class="borde">
                         <p>Así nació nuestra empresa
                            En 1968, comenzamos con la venta de accesorios para camiones y colectivos en un pequeño local anexo a una estación de servicio. De a poco fuimos agregando repuestos Fiat hasta lograr añadir la línea. <br>
