--- a/Secciones/Marcas.html
+++ b/Secciones/Marcas.html
@@ -53,7 +53,7 @@
    </div>
 </nav>
 <h2 id="marcas"  class="titulo">Marcas principales con las que trabajamos</h2>
-<img src="../Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
+<img class="container-fluid" src="../Img/marcas-repuestos.jpg" width="100%" alt="marcas-repuestos">
 <table id="comparacion" class="table table-hover table-dark table-bordered">
    <thead>
    <tr>
